[package]
name = "iron-middleware-mysql"
version = "0.0.2"
authors = ["Maciej Dziardziel <fiedzia@gmail.com>"]
description = "Mysql middleware for iron"
keywords = ["iron", "mysql", "middleware"]
license = "Apache-2.0"
repository = "https://github.com/Fiedzia/iron-middleware-mysql"
homepage = "https://github.com/Fiedzia/iron-middleware-mysql"

[dependencies]
iron = "0.4.0"

[dependencies.mysql]
version = "7.0.0"
default-features = false
